# wake-on-lan

./: AUTHORS  ChangeLog  Makefile.am  NEWS  NOTES  README  TODO  autogen.sh  configure.ac  wol.spec
check/: Makefile.am  nic-fake.py  test1.sh  test2.sh  test3.sh
debian/: changelog  control  copyright
demo/: nic-fake.py
doc/: .cvsignore  Makefile.am  wol.sgml  wol.texi
include/: macfile.h  magic.h  net.h  proxy.h  wol.h
lib/: Makefile.am  ether.h  getopt.c  getopt1.c  usleep.h  wrappers.h  xmalloc.c  xmalloc.h
m4/: Makefile.am
po/: .cvsignore  POTFILES.in  de.po  es.po  fr.po  it.po  sv.po  tr.po
src/: .cvsignore  Makefile.am  macfile.c  macfile.l  magic.c  net.c  proxy.c  wol-bootptab.in  wol-dhcpdconf.in  wol.c
