AUTOMAKE_OPTIONS = gnu no-dependencies 1.5

EXTRA_DIST = autogen.sh

SUBDIRS = demo doc intl include lib src m4 po

MAINTAINERCLEANFILES = Makefile.in aclocal.m4 config.guess config.h.in \
config.log config.status config.sub configure depcomp install-sh ltconfig \
ltmain.sh missing mkinstalldirs stamp-h.in ABOUT-NLS COPYING INSTALL \
po/Makefile.in.in po/Makefile.in po/ChangeLog po/wol.pot
