noinst_LIBRARIES = libwrappers.a
libwrappers_a_SOURCES = wrappers.h getopt.h getopt1.c getopt.c usleep.c \
usleep.h xmalloc.c xalloc.h getstr.c getstr.h getline.c getline.h \
error.c error.h realloc.c getpass4.c getpass4.h gettext.h \
ether.h ether_hostton.c

INCLUDES = -I$(top_srcdir)/intl

MAINTAINERCLEANFILES = Makefile.in
